<resources>
    <string name="app_name">My Event</string>
    <string name="popularity">Popularity</string>
    <string name="kuota">Kuota</string>
    <string name="price">Price</string>
    <string name="Type">Type</string>
    <string name="rating">Rating</string>
    <string name="choice">Best Choices</string>
    <string name="clear">CLEAR</string>
    <string name="filter">FILTER</string>
    <string-array name="popularity_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string-array name="kuota_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string-array name="price_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string-array name="type_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string-array name="rating_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string-array name="choice_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="playlistname">Playlist Love Festival</string>
    <string name="genreplaylist">Music</string>
    <string name="locplaylist">TNI AU Sastranegara</string>
    <string name="hargaplaylist">Ticket Rp.100.000 - Rp.130.000</string>
    <string name="insighdayname">Menghadapi tantangan bisnis 2020</string>
    <string name="insighdaygenre">Seminar</string>
    <string name="insighdayloc">DISPUSIPDA</string>
    <string name="insighdayharga">Ticket Rp.100.000 - Rp.175.000</string>
    <string name="forgot">FORGOT PASSWORD?</string>
    <string name="textforgot">We just need your email address to send your password reset instructions</string>
    <string name="resetpass">RESET PASSWORD</string>
    <string name="donthaveacc">Do not have an account?</string>
    <string name="registernow">Register Now</string>
</resources>
